src/objects/Deduction__c.object
<CustomObject>
    <description>Ticket revenue deductions from the ticket pricing/scaling</description>
    <fields>
        <fullName>Adjustment__c</fullName>
        <label>Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountRate__c</fullName>
        <label>Amount/Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AppliedTicketsCount__c</fullName>
        <label>Applied Tickets Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplyTicketScale__c</fullName>
        <label>Apply Ticket Scale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RateType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Paid Tickets</fullName>
                </value>
                <value>
                    <fullName>Selected Tickets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BeforeAfter__c</fullName>
        <label>Before/After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before Adjusted</fullName>
                </value>
                <value>
                    <fullName>After Adjusted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeductionAtProjection__c</fullName>
        <label>Deduction At Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DeductionAtSellout__c</fullName>
        <label>Deduction At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DeductionatSettlement__c</fullName>
        <label>Deduction at Settlement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Drives sharing rules to provide read-only access to other division members</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventDateTime__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Date Time</label>
        <referenceTo>EventDateTime__c</referenceTo>
        <relationshipLabel>Deductions</relationshipLabel>
        <relationshipName>Deductions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventIDStageType__c</fullName>
        <description>This field is being used in GridBuddy filters. Should not be on any page layouts.</description>
        <label>Event ID Stage Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Deductions</relationshipLabel>
        <relationshipName>Deductions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeInAuditPriceBlank__c</fullName>
        <formula>Event__r.UsingTicketFeed__c &amp;&amp; ISBLANK(TEXT(IncludeInAuditPrice__c))</formula>
        <label>Include In Audit Price - Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeInAuditPrice__c</fullName>
        <label>Include In Audit Price</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Included Fee</fullName>
                </value>
                <value>
                    <fullName>Included Tax</fullName>
                </value>
                <value>
                    <fullName>Excluded/Fee On Top</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MatchesEventStage__c</fullName>
        <description>Whether the deduction currently matches the state of the event.</description>
        <formula>OR(
  /* stage type matches **/
  (  Text( StageType__c ) == Event__r.StatusStage__c ),
  /* or in settlement */
  AND(  isPickVal(StageType__c,&apos;Settlement&apos;),  Event__r.SettlementStarted__c )
)</formula>
        <label>Matches Event Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeName__c</fullName>
        <description>Drives sharing rules to provide edit access to other office members</description>
        <label>Office Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryVenueOffice__c</fullName>
        <description>Drives sharing rules to provide edit access to booking members of the venue&apos;s primary office</description>
        <label>Primary Venue Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RateType__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Amount Per Ticket</fullName>
                </value>
                <value>
                    <fullName>Primary Divider Tax</fullName>
                </value>
                <value>
                    <fullName>Primary Multiplier Tax</fullName>
                </value>
                <value>
                    <fullName>Secondary Divider Tax</fullName>
                </value>
                <value>
                    <fullName>Secondary Multiplier Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SYS_RandomGeneratedText__c</fullName>
        <description>System field used in GridBuddy grids to force a change in a record.</description>
        <label>SYS Random Generated Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedTicketScale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected Ticket Scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StageType__c</fullName>
        <label>Stage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                    <default>true</default>
                    <label>Plan</label>
                </value>
                <value>
                    <fullName>Projection</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TicketScaleList__c</fullName>
        <label>Ticket Scale List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TotalBaseAmount__c</fullName>
        <label>Total Base Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalDeduction__c</fullName>
        <label>Total Deduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Artist Add-On</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>FMF/Venue Charge</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Value Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VenueOwnership__c</fullName>
        <description>Drives sharing rules to provide edit access to booking members of the venue&apos;s primary office when Owned/Operated</description>
        <label>Venue Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fxDeductionAtProjection__c</fullName>
        <formula>(DeductionAtProjection__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Deduction At Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxDeductionAtSellout__c</fullName>
        <formula>(DeductionAtSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Deduction At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxDeductionatSettlement__c</fullName>
        <formula>(DeductionatSettlement__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Deduction at Settlement (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalBaseAmount__c</fullName>
        <formula>(TotalBaseAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total Base Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Deduction</label>
    <nameField>
        <displayFormat>Ded-{000000}</displayFormat>
        <label>Deduction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deductions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Include_In_Audit_Price_Required</fullName>
        <active>true</active>
        <description>When the event is using the ticket feed, the Include In Audit Price field is required.</description>
        <errorConditionFormula>!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
IncludeInAuditPriceBlank__c &amp;&amp;
OR(
  ISCHANGED(RateType__c),
  ISCHANGED(AmountRate__c),
  ISCHANGED(ApplyTicketScale__c),
  ISCHANGED(IncludeInAuditPrice__c)
)</errorConditionFormula>
        <errorDisplayField>IncludeInAuditPrice__c</errorDisplayField>
        <errorMessage>When the ticket feed has been imported, Include In Audit Price is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_EventChildOffice</fullName>
        <active>true</active>
        <description>Checks to see if the user has access to the events office/division. If not, user can not create child records related to the event.</description>
        <errorConditionFormula>!CONTAINS( &apos;,&apos; + $User.OfficeAccess__c + &apos;,&apos;,
&apos;,&apos; + Event__r.Office__r.OfficeID__c + &apos;,&apos;)
&amp;&amp; !$Setup.GeneralSettings__c.GlobalDataAdministrator__c
&amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;

/* Financial Calculator is running and making updates */
!$Setup.GeneralSettings__c.BypassPBFlow__c</errorConditionFormula>
        <errorMessage>You cannot create child records of the event because you do not have authorized access to the events office/division</errorMessage>
    </validationRules>
</CustomObject>